aks-help/helm/local/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kapilkhubchandani
  labels:
    app: kapilkhubchandani
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
      targetPort: http
      protocol: TCP
  selector:
    app: kapilkhubchandani
